[gd_scene load_steps=7 format=3 uid="uid://dlrxiqbyvoiuj"]

[ext_resource type="Script" path="res://scenes/game/ui/game_ui/level_select.gd" id="1_c1rjp"]
[ext_resource type="Theme" uid="uid://e78vaxtv1jt8" path="res://themes/sprout_text.theme" id="1_f0erl"]
[ext_resource type="FontFile" uid="uid://c1yv5y5qfaf0g" path="res://fonts/AnimeAceRegular.otf" id="1_ymugu"]
[ext_resource type="Texture2D" uid="uid://pxu2ais88msf" path="res://textures/ui/game/level_select_menu.png" id="2_8mihj"]

[sub_resource type="LabelSettings" id="LabelSettings_rtelj"]
font = ExtResource("1_ymugu")
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_0d3ud"]
font = ExtResource("1_ymugu")
font_size = 28

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_f0erl")
script = ExtResource("1_c1rjp")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_8mihj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 150.0
offset_top = 150.0
offset_right = -150.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 40

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Level Select"
label_settings = SubResource("LabelSettings_rtelj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelContainer1" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/LevelContainer1"]
layout_mode = 2
alignment = 1

[node name="LevelContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/LevelContainer1/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Level1" type="Button" parent="MarginContainer/VBoxContainer/LevelContainer1/HBoxContainer/LevelContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Numbers 1"

[node name="LevelContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/LevelContainer1/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Level2" type="Button" parent="MarginContainer/VBoxContainer/LevelContainer1/HBoxContainer/LevelContainer2"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Numbers 2"

[node name="LevelContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/LevelContainer1/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Level3" type="Button" parent="MarginContainer/VBoxContainer/LevelContainer1/HBoxContainer/LevelContainer3"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Vowels"

[node name="LevelContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/LevelContainer2"]
layout_mode = 2
alignment = 1

[node name="LevelContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/LevelContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Level4" type="Button" parent="MarginContainer/VBoxContainer/LevelContainer2/HBoxContainer/LevelContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Animals 1"

[node name="LevelContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/LevelContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Level5" type="Button" parent="MarginContainer/VBoxContainer/LevelContainer2/HBoxContainer/LevelContainer2"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Animals 2"

[node name="LevelContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/LevelContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Level6" type="Button" parent="MarginContainer/VBoxContainer/LevelContainer2/HBoxContainer/LevelContainer3"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Mashup"

[node name="NetworkContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/NetworkContainer"]
layout_mode = 2
alignment = 1

[node name="HostContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/NetworkContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 20

[node name="Host" type="Button" parent="MarginContainer/VBoxContainer/NetworkContainer/HBoxContainer/HostContainer"]
layout_mode = 2
text = "Host"

[node name="IPContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/NetworkContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="IPEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/NetworkContainer/HBoxContainer/IPContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "IP adress..."

[node name="JoinContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/NetworkContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 20

[node name="Join" type="Button" parent="MarginContainer/VBoxContainer/NetworkContainer/HBoxContainer/JoinContainer"]
layout_mode = 2
text = "Join"

[node name="PlayerCountContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/NetworkContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 20

[node name="PlayerCount" type="Label" parent="MarginContainer/VBoxContainer/NetworkContainer/HBoxContainer/PlayerCountContainer"]
layout_mode = 2
text = "0/2 Players"
label_settings = SubResource("LabelSettings_0d3ud")

[connection signal="pressed" from="MarginContainer/VBoxContainer/LevelContainer1/HBoxContainer/LevelContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LevelContainer1/HBoxContainer/LevelContainer2/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LevelContainer1/HBoxContainer/LevelContainer3/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LevelContainer2/HBoxContainer/LevelContainer/Level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LevelContainer2/HBoxContainer/LevelContainer2/Level5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LevelContainer2/HBoxContainer/LevelContainer3/Level6" to="." method="_on_level_6_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/NetworkContainer/HBoxContainer/HostContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/NetworkContainer/HBoxContainer/JoinContainer/Join" to="." method="_on_join_pressed"]
